userの画像の読み込みの実装

--- a/app/src/main/res/layout/chat_to_row.xml
+++ b/app/src/main/res/layout/chat_to_row.xml
@@ -10,17 +10,16 @@
         android:id="@+id/textView_to_row"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:background="@android:color/white"
         android:maxWidth="260dp"
         android:padding="16dp"
         android:text="this is my massage"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/image_chat_to_row"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/image_chat_to_row"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="4dp"
