--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -10,18 +10,17 @@
         android:id="@+id/textView_from_row"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:background="@android:color/white"
+        android:maxWidth="260dp"
         android:padding="16dp"
         android:text="this is my massage"
-        android:maxWidth="260dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView_from_massages"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.538" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView_from_massages"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
