--- a/app/src/main/res/layout/activity_another_board.xml
+++ b/app/src/main/res/layout/activity_another_board.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <SurfaceView
-        android:id="@+id/surfaceView"
+        android:id="@+id/surfaceView_read"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/resetBtn"
