--- a/app/src/main/res/layout/activity_new_massage.xml
+++ b/app/src/main/res/layout/activity_new_massage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewMassageActivity">
+    tools:context=".Message.NewMassageActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleview_newmassage"
