return view 及び　nullエラーの解決

--- a/app/src/main/res/layout/activity_another_board.xml
+++ b/app/src/main/res/layout/activity_another_board.xml
@@ -43,13 +43,13 @@
         android:id="@+id/surfaceView_read"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
+        app:layout_constraintBottom_toTopOf="@+id/btn_to_write_board"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/redBtn" />
 
     <Button
-        android:id="@+id/resetBtn"
+        android:id="@+id/btn_to_write_board"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
