--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -40,16 +40,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <SurfaceView
-        android:id="@+id/surfaceView"
+        android:id="@+id/surfaceView_write"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
+        app:layout_constraintBottom_toTopOf="@+id/btn_board_reset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/redBtn" />
 
     <Button
-        android:id="@+id/resetBtn"
+        android:id="@+id/btn_board_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -67,5 +67,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/resetBtn" />
+        app:layout_constraintStart_toEndOf="@+id/btn_board_reset" />
 </androidx.constraintlayout.widget.ConstraintLayout>
