--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -20,7 +20,7 @@
     <Button
         android:id="@+id/redBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:text="あか"
         app:layout_constraintEnd_toStartOf="@+id/greenBtn"
