--- a/app/src/main/res/layout/activity_another_board.xml
+++ b/app/src/main/res/layout/activity_another_board.xml
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_to_write_board"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button_prev_to" />
 
     <Button
         android:id="@+id/btn_to_write_board"
@@ -27,7 +27,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_to_prev"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:text="Button"
