--- a/app/src/main/res/layout/activity_another_board.xml
+++ b/app/src/main/res/layout/activity_another_board.xml
@@ -5,6 +5,7 @@
     android:id="@+id/another_board"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".Board.BoardActivity">
 
     <SurfaceView
@@ -14,7 +15,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_to_write_board"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_prev_to" />
+        app:layout_constraintTop_toBottomOf="@+id/button_to_prev" />
 
     <Button
         android:id="@+id/btn_to_write_board"
