--- a/app/src/main/res/layout/activity_another_board.xml
+++ b/app/src/main/res/layout/activity_another_board.xml
@@ -5,7 +5,7 @@
     android:id="@+id/another_board"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/common_google_signin_btn_text_dark_default"
     tools:context=".Board.BoardActivity">
 
     <SurfaceView
