--- a/app/src/main/res/layout/activity_room_main.xml
+++ b/app/src/main/res/layout/activity_room_main.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".Room.RoomMainActivity">
 
+    <Button
+        android:id="@+id/btn_main_to_write"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="write board"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_main_to_watch"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_main_to_watch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="52dp"
+        android:text="watch board"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
