--- a/app/src/main/res/drawable/frame_style_green.xml
+++ b/app/src/main/res/drawable/frame_style_green.xml
@@ -9,7 +9,7 @@
                 android:topLeftRadius="10dp"
                 />
             <solid
-                android:color="@android:color/black"
+                android:color="@android:color/holo_green_light"
                 />
         </shape>
     </item>
