--- a/app/src/main/res/layout/activity_room_start.xml
+++ b/app/src/main/res/layout/activity_room_start.xml
@@ -39,4 +39,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_from_start" />
 
+    <TextView
+        android:id="@+id/text_user__count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exit_from_start" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
