準備完了機能の実装

--- a/app/src/main/res/drawable/frame_text_watch.xml
+++ b/app/src/main/res/drawable/frame_text_watch.xml
@@ -11,6 +11,6 @@
     <!-- 枠線 width:線の幅、color:線の色 -->
     <stroke
         android:width="6dp"
-        android:color="#ff0000" />
+        android:color="#0000ff" />
 
 </shape>
