--- a/app/src/main/res/layout/activity_room_result.xml
+++ b/app/src/main/res/layout/activity_room_result.xml
@@ -29,36 +29,177 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
 
             <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/result_image_1"
+                android:layout_width="40dp"
+                android:layout_height="60dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/btn_star_big_on" />
+                android:layout_gravity="bottom"
+                android:src="@drawable/ranking1" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/result_score_1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="0点" />
+                android:gravity="bottom"
+                android:paddingLeft="10sp"
+                android:text="0"
+                android:textSize="35sp" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/result_name_1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:text="ゆずき" />
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:gravity="bottom"
+                android:text="ゆずき"
+                android:textSize="30sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:id="@+id/result_image_2"
+                android:layout_width="40dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:layout_gravity="bottom"
+                android:src="@drawable/ranking2" />
+
+            <TextView
+                android:id="@+id/result_score_2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="bottom"
+                android:paddingLeft="10sp"
+                android:text="0"
+                android:textSize="35sp" />
+
+            <TextView
+                android:id="@+id/result_name_2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:gravity="bottom"
+                android:text="ゆずき"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:id="@+id/result_image_3"
+                android:layout_width="40dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:src="@drawable/ranking3" />
+
+            <TextView
+                android:id="@+id/result_score_3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="bottom"
+                android:paddingLeft="10sp"
+                android:text="0"
+                android:textSize="35sp" />
+
+            <TextView
+                android:id="@+id/result_name_3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:gravity="bottom"
+                android:text="ゆずき"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:id="@+id/result_image_4"
+                android:layout_width="40dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:src="@drawable/ranking4" />
+
+            <TextView
+                android:id="@+id/result_score_4"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="bottom"
+                android:paddingLeft="10sp"
+                android:text="0"
+                android:textSize="35sp" />
+
+            <TextView
+                android:id="@+id/result_name_4"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:gravity="bottom"
+                android:text="ゆずき"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:id="@+id/result_image_5"
+                android:layout_width="40dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:src="@drawable/ranking5" />
+
+            <TextView
+                android:id="@+id/result_score_5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="bottom"
+                android:paddingLeft="10sp"
+                android:text="0"
+                android:textSize="35sp"/>
+
+            <TextView
+                android:id="@+id/result_name_5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:text="ゆずき"
+                android:textSize="30sp"
+                android:gravity="bottom"/>
 
         </LinearLayout>
 
